Game engine crash when try to run after blender app start #25488

Closed
opened 2011-01-04 16:15:39 +01:00 by Jiří Živný · 8 comments

%%%When I start Blender application and I try to run Game Engine by pressing "P" or by selecting "Start Game Engine" item from "Game" menu, then Game Engine (Blender) crash. It happens only after whole new start of Blender. When I start blender application and choose "File->New" then Game Engine (Blender) not crash on its start and when I load existing file then Game Engine (Blender) not crash on its start too.

Reproduced on one another computer.

Blender version : 2.56.0 beta r33949 (r34059 - build from graphicall.org - same problem), other 2.5 versions not tested

My configurations :
1)

  • Windows Vista x64 Ultimate SP2
  • Intel Core 2 Quad Q6600
  • nVidia GeForce 8600 GT (512MB), driver version : 260.99
    (tested both 32-bit and 64-bit versions of blender)
  • Windows XP x86 Professional SP3
  • AMD Athlon 1700+
  • nVidia GeForce 5600 FX (128MB), driver version : 175.16
    (tested 32-bit - 2.56.0 beta r33949 only)

P.S. I am sorry if this was reported before, but I not found any reference at BugTracker niether trough google.%%%

%%%When I start Blender application and I try to run Game Engine by pressing "P" or by selecting "Start Game Engine" item from "Game" menu, then Game Engine (Blender) crash. It happens only after whole new start of Blender. When I start blender application and choose "File->New" then Game Engine (Blender) not crash on its start and when I load existing file then Game Engine (Blender) not crash on its start too. Reproduced on one another computer. Blender version : 2.56.0 beta r33949 (r34059 - build from graphicall.org - same problem), other 2.5 versions not tested My configurations : 1) - Windows Vista x64 Ultimate SP2 - Intel Core 2 Quad Q6600 - nVidia GeForce 8600 GT (512MB), driver version : 260.99 (tested both 32-bit and 64-bit versions of blender) 2) - Windows XP x86 Professional SP3 - AMD Athlon 1700+ - nVidia GeForce 5600 FX (128MB), driver version : 175.16 (tested 32-bit - 2.56.0 beta r33949 only) P.S. I am sorry if this was reported before, but I not found any reference at BugTracker niether trough google.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Not able to reproduce on 32-bit Ubuntu 10.10 r34067. Windows issue maybe?%%%

%%%Not able to reproduce on 32-bit Ubuntu 10.10 r34067. Windows issue maybe?%%%
Member

%%%You really have to be explicit: did you use the official 2.56 binary from blender.org?
%%%

%%%You really have to be explicit: did you use the official 2.56 binary from blender.org? %%%
Author

%%%Yes, I used zipped Blender 2.56 (r33949) from blender.org . (And r34059 from graphicall.org .)%%%

%%%Yes, I used zipped Blender 2.56 (r33949) from blender.org . (And r34059 from graphicall.org .)%%%
Member

%%%check it with 2.55 release on blender, or 2.54...
http://download.blender.org/release/

Also try to start blender in a DOS box/terminal, with option noaudio:
blender.exe -noaudio

With nobody yet able to redo, we have to rule out first if there's something in your configuration that causes it...
I'm no windows user... but cant you get some info about the crash itself?
%%%

%%%check it with 2.55 release on blender, or 2.54... http://download.blender.org/release/ Also try to start blender in a DOS box/terminal, with option noaudio: blender.exe -noaudio With nobody yet able to redo, we have to rule out first if there's something in your configuration that causes it... I'm no windows user... but cant you get some info about the crash itself? %%%

%%%I can confirm crash

official releases:
2.5-alpha2-win32 - no crash
2.53-beta-win32 - no crash
2.54-beta-win32 - crash
2.55-beta-win32 - crash
2.56-beta-win32 - crash

minGW build r34090 - crash

my testcase:
start blender, PKEY => crash

start blender, save .blend or open .blend, PKEY => no crash

Windows Vista, Intel Core2 #5200, Ati radeon mobility X1400

info from gdb:

C:\Blender\install\34090>gdb blender.exe
GNU gdb (GDB) 7.1
Copyright (C) 2010 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later http://gnu.org/licenses/gpl.html
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law. Type "show copying"
and "show warranty" for details.
This GDB was configured as "mingw32".
For bug reporting instructions, please see:
http://www.gnu.org/software/gdb/bugs/...
Reading symbols from C:\Blender\install\34090/blender.exe...done.
(gdb) run
Starting program: C:\Blender\install\34090/blender.exe
[New Thread 3468.0xf70]
[New Thread 3468.0x5e4]
[New Thread 3468.0x1408]
[New Thread 3468.0x15e0]
[New Thread 3468.0xf14]
[New Thread 3468.0x10e0]
[New Thread 3468.0x14ec]
[New Thread 3468.0x169c]
[New Thread 3468.0xe1c]
found bundled python: C:\Blender\install\34090\2.56\python
Detected GL_ARB_texture_env_combine
Detected GL_ARB_texture_cube_map
Detected GL_ARB_multitexture
Detected GL_ARB_shader_objects
Detected GL_ARB_vertex_shader
Detected GL_ARB_fragment_shader
Detected GL_ARB_vertex_program
Detected GL_ARB_depth_texture
Detected GL_EXT_separate_specular_color
[New Thread 3468.0x1434]

Program received signal SIGSEGV, Segmentation fault.
0x00914494 in initPySysObjects__append(_object*, char*) ()

(gdb) backtrace

  • 0 0x00914494 in initPySysObjects__append(_object*, char*) ()
  • 1 0x0091a6e0 in initGamePythonScripting(STR_String const&, TPythonSecurityLeve
    l, Main*) ()

2 0x0091c6db in setupGamePython(KX_KetsjiEngine*, KX_Scene*, Main*, _object*,

_object**, _object**, int, char**) ()

  • 3 0x008ef449 in StartKetsjiShell ()
  • 4 0x0046e14a in game_engine_exec ()
  • 5 0x00409d0b in wm_operator_invoke ()
  • 6 0x0040aa76 in wm_handler_operator_call ()
  • 7 0x0040ac05 in wm_handlers_do ()
  • 8 0x0040b766 in wm_event_do_handlers ()
  • 9 0x00404fb0 in WM_main ()
  • 10 0x0040334e in main ()
    (gdb)

%%%

%%%I can confirm crash official releases: 2.5-alpha2-win32 - no crash 2.53-beta-win32 - no crash 2.54-beta-win32 - crash 2.55-beta-win32 - crash 2.56-beta-win32 - crash minGW build r34090 - crash my testcase: start blender, PKEY => crash start blender, save .blend or open .blend, PKEY => no crash Windows Vista, Intel Core2 #5200, Ati radeon mobility X1400 info from gdb: C:\Blender\install\34090>gdb blender.exe GNU gdb (GDB) 7.1 Copyright (C) 2010 Free Software Foundation, Inc. License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html> This is free software: you are free to change and redistribute it. There is NO WARRANTY, to the extent permitted by law. Type "show copying" and "show warranty" for details. This GDB was configured as "mingw32". For bug reporting instructions, please see: <http://www.gnu.org/software/gdb/bugs/>... Reading symbols from C:\Blender\install\34090/blender.exe...done. (gdb) run Starting program: C:\Blender\install\34090/blender.exe [New Thread 3468.0xf70] [New Thread 3468.0x5e4] [New Thread 3468.0x1408] [New Thread 3468.0x15e0] [New Thread 3468.0xf14] [New Thread 3468.0x10e0] [New Thread 3468.0x14ec] [New Thread 3468.0x169c] [New Thread 3468.0xe1c] found bundled python: C:\Blender\install\34090\2.56\python Detected GL_ARB_texture_env_combine Detected GL_ARB_texture_cube_map Detected GL_ARB_multitexture Detected GL_ARB_shader_objects Detected GL_ARB_vertex_shader Detected GL_ARB_fragment_shader Detected GL_ARB_vertex_program Detected GL_ARB_depth_texture Detected GL_EXT_separate_specular_color [New Thread 3468.0x1434] Program received signal SIGSEGV, Segmentation fault. 0x00914494 in initPySysObjects__append(_object*, char*) () (gdb) backtrace - 0 0x00914494 in initPySysObjects__append(_object*, char*) () - 1 0x0091a6e0 in initGamePythonScripting(STR_String const&, TPythonSecurityLeve l, Main*) () # 2 0x0091c6db in setupGamePython(KX_KetsjiEngine*, KX_Scene*, Main*, _object*, _object**, _object**, int, char**) () - 3 0x008ef449 in StartKetsjiShell () - 4 0x0046e14a in game_engine_exec () - 5 0x00409d0b in wm_operator_invoke () - 6 0x0040aa76 in wm_handler_operator_call () - 7 0x0040ac05 in wm_handlers_do () - 8 0x0040b766 in wm_event_do_handlers () - 9 0x00404fb0 in WM_main () - 10 0x0040334e in main () (gdb) %%%

%%%There was an error with non utf8 paths which caused the crash r34121.
fixed other places where with would have crashed too.

corrected r34121. closing.%%%

%%%There was an error with non utf8 paths which caused the crash r34121. fixed other places where with would have crashed too. corrected r34121. closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#25488
No description provided.