bugfix [#25488] Game engine crash when try to run after blender app start - also found other places where utf8 isnt ensured. - remove duplicate NULL checks in object_edit.c